fix:  avoid NullPointerExceptions if array element is null (#194)